--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -73,48 +73,46 @@
             </button>
             <div class="page-info">
               <h1 class="page-title mb-1" id="pageTitle">Invoice Creation</h1>
-              <div class="breadcrumb">
-                <span class="breadcrumb-item">Dashboard</span>
-                <i class="bi bi-chevron-right"></i>
-                <span class="breadcrumb-item active" id="currentPage">Invoice Creation</span>
-              </div>
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item">Dashboard</li>
+                  <li class="breadcrumb-item active" id="currentPage">Invoice Creation</li>
+                </ol>
+              </nav>
             </div>
           </div>
 
           <div class="header-actions">
             <div class="action-group">
-              <button class="header-icon" title="Refresh">
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Refresh">
                 <i class="bi bi-arrow-repeat"></i>
                 <div class="ripple"></div>
               </button>
-              <button class="header-icon" title="Notifications">
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Notifications">
                 <i class="bi bi-bell"></i>
                 <span class="badge">3</span>
                 <div class="ripple"></div>
               </button>
-              <button class="header-icon" title="Messages">
+              <button class="header-icon" data-bs-toggle="tooltip" data-bs-title="Messages">
                 <i class="bi bi-chat"></i>
                 <span class="badge">5</span>
                 <div class="ripple"></div>
               </button>
             </div>
             <div class="profile-wrapper">
-              <button class="profile-trigger">
+              <button class="profile-trigger" data-bs-toggle="dropdown">
                 <div class="profile-info">
                   <div class="profile-avatar">
                     <span class="avatar-text">JD</span>
                     <span class="status-dot"></span>
                   </div>
-                  <div class="profile-details">
+                  <div class="profile-details d-none d-sm-flex">
                     <span class="profile-name">Jane Doe</span>
-                    <span class="profile-meta">
-                      <i class="bi bi-circle-fill"></i>
-                      Administrator
-                    </span>
+                    <span class="profile-role">Administrator</span>
                   </div>
-                </div>
+              </div>
                 <div class="profile-action">
-                  <i class="bi bi-chevron-down"></i>
+              <i class="bi bi-chevron-down"></i>
                 </div>
               </button>
             </div>
